# pea-lab

./: ATSP.cpp  ATSP.h  CMakeLists.txt  Edge.cpp  Edge.h  EdgeList.cpp  EdgeList.h  File.cpp  File.h  FileSupport.cpp  FileSupport.h  Graph.cpp  Graph.h  Heap.cpp  Heap.h  Makefile  Menu.cpp  Menu.h  Permutation.cpp  Permutation.h  README.md  dynamic.py  main.cpp  test data  test.cpp  wyniki-lab3.csv  wyniki.txt
data/: 10.txt  4.tsp  4.txt  5.tsp  5.txt  6.tsp  8.tsp  data_generator  data_generator_to_fix  tsp4.txt
data/10/: 10_0.tsp  10_1.tsp  10_10.tsp  10_11.tsp  10_12.tsp  10_13.tsp  10_14.tsp  10_15.tsp  10_16.tsp  10_17.tsp  10_18.tsp  10_19.tsp  10_2.tsp  10_20.tsp  10_21.tsp  10_22.tsp  10_23.tsp  10_24.tsp  10_25.tsp  10_26.tsp  10_27.tsp  10_28.tsp  10_29.tsp  10_3.tsp  10_4.tsp  10_5.tsp  10_6.tsp  10_7.tsp  10_8.tsp  10_9.tsp
data/11/: 11_0.tsp  11_1.tsp  11_10.tsp  11_11.tsp  11_12.tsp  11_13.tsp  11_14.tsp  11_15.tsp  11_16.tsp  11_17.tsp  11_18.tsp  11_19.tsp  11_2.tsp  11_20.tsp  11_21.tsp  11_22.tsp  11_23.tsp  11_24.tsp  11_25.tsp  11_26.tsp  11_27.tsp  11_28.tsp  11_29.tsp  11_3.tsp  11_4.tsp  11_5.tsp  11_6.tsp  11_7.tsp  11_8.tsp  11_9.tsp
data/12/: 12_0.tsp  12_1.tsp  12_10.tsp  12_11.tsp  12_12.tsp  12_13.tsp  12_14.tsp  12_15.tsp  12_16.tsp  12_17.tsp  12_18.tsp  12_19.tsp  12_2.tsp  12_20.tsp  12_21.tsp  12_22.tsp  12_23.tsp  12_24.tsp  12_25.tsp  12_26.tsp  12_27.tsp  12_28.tsp  12_29.tsp  12_3.tsp  12_4.tsp  12_5.tsp  12_6.tsp  12_7.tsp  12_8.tsp  12_9.tsp
data/4/: 4_0.tsp  4_1.tsp  4_10.tsp  4_11.tsp  4_12.tsp  4_13.tsp  4_14.tsp  4_2.tsp  (+22 more)
(+150 files in other folders)
